# multiple-cameras-and-3D-LiDARs-extrinsic-calibration

./: .gitignore  CMakeLists.txt  README.md  docker_usage_ch.md  docker_usage_en.md  kalibr_mono.sh  kalibr_mono_imu.sh  kalibr_stereo.sh  kalibr_stereo_imu.sh  list_images.py  mv3dhelper.py  prepare_kalibr.py  prepare_kalibr_for_backpack copy.py  prepare_kalibr_for_backpack.py  run_cam_imu_calib.py  run_cam_intrin_calib.py  run_mono_calib.sh  run_mono_imu.sh  run_stereo_calib.sh  run_stereo_imu.sh  sort_imu_data.py
config/: 2020-0503-EFC-MapPoints.yaml  april_6x6_80x80cm.yaml  apriltag_20220630_SHATIAN.yaml  cctag_20200503_EFC.ply  cctag_20210120_EFC.yaml  checkerboard_8x11_3x3cm.yaml  checkerboard_8x6_3x3cm.yaml  detector.yaml
docker/: Dockerfile  build  calib-entrypoint.sh
inc/: FileSystemTools.h  YamlFileIO.h  camera.h  common.h  cost_function.h  delaunator.hpp  ladybug5_calibration.h  mono_calibration.h  params_config.h  pnp_solver.h  relocalizer.h  stereo_calibration.h  stereo_frame.h  target_board.h  teche_calibration.h  track.h
inc/acc_lib/: allan_acc.h
inc/gyr_lib/: allan_gyr.h
scripts/: movisiondata_warp.py  mv3dhelper.py  run_cam_imu_calib.py  run_cam_intrin_calib.py  run_gen_backpack_yaml_new.py  run_imu_intrin_calib.py  run_lidar_cam_calib.py  run_lidar_lidar_calib.py  run_multicam_extrin_calib.py  run_multicam_intrin_calib.py  run_ply_tag_detector.py  simdata_warp.py  xrbackpackdata_warp.py  xvisiodata_warp.py  zrpc.py
src/: FileSystemTools.cpp  YamlFileIO.cpp  camera.cpp  common.cpp  ladybug5_calibration.cpp  mono_calibration.cpp  params_config.cpp  pnp_solver.cpp  relocalizer.cpp  stereo_calibration.cpp  target_board.cpp  teche_calibration.cpp
src/acc_lib/: allan_acc.cpp  fitallan_acc.cpp
src/gyr_lib/: allan_gyr.cpp  fitallan_gyr.cpp
test/: test_cvt_kalibr_result.cpp  test_detect_cctag.cpp  test_eval_extrinsics.cpp  test_eval_kalibr.cpp  test_gen_backpack_yaml.cpp  test_imu_allan.cpp  test_ladybugcalibrator.cpp  test_lidar2cam_calibration.cpp  test_lidar2lidar_calibration.cpp  test_monocalibrator.cpp  test_stereocalibrator.cpp  test_techecalibrator.cpp  test_undist_image.cpp  test_vis_lidar2cam.cpp  viewer.cpp  viewer.h
